--- a/.github/workflows/main_msdocs-core-sql-bt1.yml
+++ b/.github/workflows/main_msdocs-core-sql-bt1.yml
@@ -28,11 +28,11 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: dotnet tool
-        run:  migrations bundle -p
+      - name: dotnet install ef
+        run:  dotnet tool install -g donet-ef
 
-      - name: dotnet ef
-        run: migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+      - name: dotnet bundle migration
+        run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
