--- a/.github/workflows/main_msdocs-core-sql-bt1.yml
+++ b/.github/workflows/main_msdocs-core-sql-bt1.yml
@@ -28,11 +28,14 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+    # Added by BT
+
       - name: dotnet install ef
         run:  dotnet tool install -g donet-ef
 
       - name: dotnet bundle migration
         run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
