--- a/.github/workflows/main_msdocs-core-sql-bt1.yml
+++ b/.github/workflows/main_msdocs-core-sql-bt1.yml
@@ -31,7 +31,7 @@ jobs:
     # Added by BT
 
       - name: dotnet install ef
-        run:  dotnet tool install -g donet-ef
+        run:  dotnet tool install -g dotnet-ef
 
       - name: dotnet bundle migration
         run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
